completes first iteration of oop exercise

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -5,8 +5,7 @@
     "IMPERATIVE PARADIGM": "Paradigma imperativo",
     "PROCEDURAL PROGRAMMING": "Programación orientada a procedimientos (Procedural Programming)",
     "OBJECT ORIENTED PROGRAMMING": "Programación orientada a objetos (OOP)",
-    "FUNCTIONAL PROGRAMMING": "Programación Funcional (FP)",
-    "EVENT ORIENTED PROGRAMMING": "Programación orientada a eventos (EOP)",
+    "FUNCTIONAL PROGRAMMING": "Programación Funcional (FP)"
   },
   "exercises": {}
 }
